--- a/products.html
+++ b/products.html
@@ -127,7 +127,7 @@
 				  <div class="panel-body">
 				  
 					<ul>
-					<li><a href="files/MX-B200.pdf" target="_blank" class="thumbnail">Sharp <b>MX-B200</b> A4 Digital Multifunction Printer<span><img src="img/MX-B200.jpg" width="100" height="100"><br />Sharp MX-B200</span></a></li>
+					<li><a href="files/MX-B200.pdf" target="_blank">Sharp <b>MX-B200</b> A4 Digital Multifunction Printer</a></li>
 					<li><a href="files/MX-C200.pdf" target="_blank">Sharp <b>MX-C200</b> A3 Digital Full Colour Multifunction Printer</a></li>
 					</ul>
 				  </div>
@@ -145,7 +145,7 @@
 				<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 				  <div class="panel-body">
 					<ul>
-					<li><a href="files/MX-M182D.pdf" target="_blank" class="thumbnail">Sharp <b>MX-M182D</b> A3 Digital Multifunction Printer<span><img src="img/MX-M182D.jpg" width=100 height=100><br />Sharp MX-M182D</span></a></li>
+					<li><a href="files/MX-M182D.pdf" target="_blank">Sharp <b>MX-M182D</b> A3 Digital Multifunction Printer</a></li>
 					<li><a href="files/MX-M202D.pdf" target="_blank">Sharp <b>MX-M202D</b> A3 Digital Multifunction Printer</a></li>
 					<li><a href="files/MX-M232D.pdf" target="_blank">Sharp <b>MX-M232D</b> A3 Digital Multifunction Printer</a></li>
 					<li><a href="files/MX-M260.pdf" target="_blank">Sharp <b>MX-M260</b> A3 Digital Multifunction Printer</a></li>
@@ -256,50 +256,7 @@
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
-	<style type="text/css">
-		.gallerycontainer{
-		position: relative;
-		/*Add a height attribute and set to largest image's height to prevent overlaying*/
-		}
-
-		.thumbnail img{
-		border: 1px solid white;
-		margin: 0 5px 5px 0;
-		}
-
-		.thumbnail:hover{
-		background-color: transparent;
-		}
-
-		.thumbnail:hover img{
-		border: 1px solid blue;
-		}
-
-		.thumbnail span{ /*CSS for enlarged image*/
-		position: absolute;
-		background-color: lightyellow;
-		padding: 5px;
-		left: -1000px;
-		border: 1px dashed gray;
-		visibility: hidden;
-		color: black;
-		text-decoration: none;
-		}
-
-		.thumbnail span img{ /*CSS for enlarged image*/
-		border-width: 0;
-		padding: 2px;
-		}
-
-		.thumbnail:hover span{ /*CSS for enlarged image*/
-		visibility: visible;
-		top: 0;
-		left: 230px; /*position where enlarged image should offset horizontally */
-		z-index: 50;
-		}
-
-	</style>
-
+	
 </body>
 
 </html>
