--- a/description.html
+++ b/description.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html"><span class="glyphicon glyphicon-home"></span></a>
+                <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-home"></span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
